<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.asu.iho.MainActivity$PlaceholderFragment" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="false"
        android:layout_alignParentLeft="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/button"
                    android:background="@drawable/h2" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/news"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.51"
                    android:background="@drawable/button_selector"
                    android:text="@string/news"
                    android:textColor="@android:color/background_light"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/field"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.75"
                    android:text="@string/field"
                    android:background="@drawable/button_selector"
                    android:textColor="@android:color/background_light"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/about"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.89"
                    android:text="@string/about"
                    android:background="@drawable/button_selector"
                    android:textColor="@android:color/background_light"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/gallery"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.75"
                    android:text="@string/gallery"
                    android:background="@drawable/button_selector"
                    android:textColor="@android:color/background_light"
                    android:textStyle="bold" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/connect"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.75"
                    android:text="@string/connect"
                    android:background="@drawable/button_selector"
                    android:textColor="@android:color/background_light"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/donate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.75"
                    android:text="@string/donate"
                    android:background="@drawable/button_selector"
                    android:textColor="@android:color/background_light"
                    android:textStyle="bold" />
            </LinearLayout>


        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignTop="@+id/scrollView1"
        android:layout_alignParentRight="true"
        android:layout_marginTop="193dp"></LinearLayout>

</RelativeLayout>