<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/about_fragment"
    tools:context="com.iho.asu.About">

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="false"
        android:layout_alignParentLeft="true"
        android:layout_gravity="center_horizontal|top">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/imageView"
                android:layout_gravity="center_horizontal|top"
                android:background="@drawable/about" />
            </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="240dp"
            android:text="@string/aboutInfo"
            android:layout_gravity="center"
            android:textAlignment="textStart" />
    </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageView2"
                android:layout_gravity="center"
                android:background="@drawable/line" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Location"
                android:textStyle="bold" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:text="@string/locationInfo"
                android:layout_gravity="center"
                android:textAlignment="textStart" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageView3"
                android:layout_gravity="center"
                android:background="@drawable/line" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Contact"
                android:textStyle="bold" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:text="@string/contactInfo"
                android:layout_gravity="center"
                android:textAlignment="textStart" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageView4"
                android:layout_gravity="center"
                android:background="@drawable/line" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Mailing address"
                android:textStyle="bold" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:text="@string/mailInfo"
                android:layout_gravity="center"
                android:textAlignment="textStart" />
        </LinearLayout>
    </LinearLayout>
    </ScrollView>


</FrameLayout>
